Use jdk11 as build agent (#54)
* Use jdk11 as build agent

* Fix surefire